--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.1",
     "react-spring": "^8.0.27",
     "react-ticker": "^1.2.2",
     "react-visibility-sensor": "^5.1.1"
